# android-opencv-opengl-web-rnd-assignmen_

./: .gitignore  3_DAY_PLAN.md  COMMIT_MESSAGES.md  EXPECTED_OUTPUT.md  GRADLE_FIX.md  HOW_TO_OPEN_WEB_PAGE.md  PROJECT_SUMMARY.md  README.md  RUN_OUTPUT.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv_processor.cpp  opencv_processor.h
app/src/main/java/com/opencvgl/app/: GLRenderer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap/: .gitkeep
app/src/main/res/values/: strings.xml
gl/: fragment_shader.glsl  vertex_shader.glsl
web/: build.js  index.html  main.ts  package-lock.json  package.json  tsconfig.json
